--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
@@ -20,7 +22,10 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-rating-star-with-type": "^1.2.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.0.1",
+    "recharts": "^2.14.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
