--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-calendar-datetime-picker": "^1.7.4",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.2.0",
     "react-icons": "^5.3.0",
     "react-rating-star-with-type": "^1.2.2",
     "react-rating-stars-component": "^2.2.0",
